--- a/tttodolist/styles2.css
+++ b/tttodolist/styles2.css
@@ -36,4 +36,19 @@ body {
     width: 1.5em;
     text-align: center;
     border: 1px solid #bbb;
+    color: #CCC;
+    font-size: 1em;
+    font-weight: 900
+
 }
+
+.important-flag.open{
+    color: red
+    ;
+
+}
+
+.input-pane #his-btn.open{
+    background-color: blue;
+}
+
